# macos-cliboard-mcp

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yaml
